[gd_scene load_steps=16 format=3 uid="uid://blyjam343i8ib"]

[ext_resource type="PackedScene" uid="uid://ke2r121keik4" path="res://scenes/entities/enemies/enemy.tscn" id="1_len0i"]
[ext_resource type="Script" uid="uid://c78540q3ehyat" path="res://scenes/entities/enemies/skeleton_warrior.gd" id="2_1j3fj"]
[ext_resource type="PackedScene" uid="uid://cccmmltwvgm3o" path="res://graphics/characters/skeleton warrior/Skeleton_Warrior.glb" id="2_dnovq"]
[ext_resource type="PackedScene" uid="uid://sjihgffj5riy" path="res://scenes/weapons/bone.tscn" id="4_1j3fj"]
[ext_resource type="PackedScene" uid="uid://dydnnq3ww2uyk" path="res://graphics/weapons/shield.gltf.glb" id="5_1j3fj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pw58p"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1j3fj"]
animation = &"1H_Melee_Attack_Slice_Diagonal"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_pw58p"]
fadein_time = 0.2
fadeout_time = 0.2

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_len0i"]
animation = &"2H_Melee_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dnovq"]
animation = &"Walking_B"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1j3fj"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pw58p"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0gor6"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_c8yq2"]
states/idle/node = SubResource("AnimationNodeAnimation_len0i")
states/idle/position = Vector2(382.5, 101.406)
states/walk/node = SubResource("AnimationNodeAnimation_dnovq")
states/walk/position = Vector2(553, 100.312)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_1j3fj"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_pw58p"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_0gor6")]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_h1jgc"]
graph_offset = Vector2(-396.48, 192.96)
nodes/AttackAnimation/node = SubResource("AnimationNodeAnimation_1j3fj")
nodes/AttackAnimation/position = Vector2(-350, 350)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_pw58p")
nodes/AttackOneShot/position = Vector2(20, 130)
nodes/MoveStateMachine/node = SubResource("AnimationNodeStateMachine_c8yq2")
nodes/MoveStateMachine/position = Vector2(-330, 160)
node_connections = [&"AttackOneShot", 0, &"MoveStateMachine", &"AttackOneShot", 1, &"AttackAnimation", &"output", 0, &"AttackOneShot"]

[node name="SkeletonWarrior" instance=ExtResource("1_len0i")]
script = ExtResource("2_1j3fj")

[node name="CollisionShape3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_pw58p")

[node name="AnimationTree" parent="." index="1"]
root_node = NodePath("../skin")
tree_root = SubResource("AnimationNodeBlendTree_h1jgc")
anim_player = NodePath("../skin/AnimationPlayer")
parameters/AttackOneShot/active = 0.0
parameters/AttackOneShot/internal_active = 0.0180556
parameters/AttackOneShot/request = 0

[node name="AttackTimer" parent="Timers" index="0"]
wait_time = 2.5
autostart = true

[node name="skin" parent="." index="3" instance=ExtResource("2_dnovq")]

[node name="Skeleton3D" parent="skin/Rig" index="0"]
bones/1/position = Vector3(0.00841076, 0.376693, 1.21849e-10)
bones/2/rotation = Quaternion(-0.0605995, -0.130282, -0.00797808, 0.989591)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(0.00259598, 8.4876e-05, -0.000690392, 0.999996)
bones/3/scale = Vector3(1, 1, 1)
bones/4/position = Vector3(0.248044, 0.110857, 0.0825816)
bones/4/rotation = Quaternion(-0.578798, -0.24889, -0.733037, 0.256327)
bones/4/scale = Vector3(1, 0.999999, 1)
bones/5/rotation = Quaternion(3.46825e-08, -3.62516e-08, -0.555639, 0.831424)
bones/6/rotation = Quaternion(1.10745e-08, -5.13145e-13, 0.0266581, 0.999645)
bones/7/rotation = Quaternion(-0.191296, -0.675028, -0.0529513, 0.71059)
bones/8/position = Vector3(8.34836e-10, 0.0961252, -0.0575001)
bones/8/rotation = Quaternion(-6.29278e-09, 4.24393e-09, -0.707107, 0.707107)
bones/9/position = Vector3(-0.176682, 0.111703, 0.0891542)
bones/9/rotation = Quaternion(-0.249428, 0.345455, 0.840667, 0.334254)
bones/9/scale = Vector3(1, 0.999999, 1)
bones/10/rotation = Quaternion(2.68246e-08, 4.80474e-08, 0.57019, 0.821513)
bones/11/rotation = Quaternion(-7.94255e-09, -1.43988e-08, -0.0266581, 0.999645)
bones/12/rotation = Quaternion(-0.237801, 0.220832, -0.1097, 0.939494)
bones/13/position = Vector3(-8.34829e-10, 0.0961251, -0.0574999)
bones/13/rotation = Quaternion(0.155711, -0.189455, 0.670289, 0.700409)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(0.0837538, 0.13045, 0.00578207, 0.987894)
bones/14/scale = Vector3(1, 1, 1)
bones/16/position = Vector3(0.170945, 0.113587, 1.39233e-08)
bones/16/rotation = Quaternion(0.993422, 0.0735384, 0.0394088, 0.0784358)
bones/17/rotation = Quaternion(0.359921, 6.38922e-08, -2.55647e-07, 0.932983)
bones/18/rotation = Quaternion(-0.597203, -0.213093, 0.0555547, 0.771267)
bones/19/rotation = Quaternion(3.27848e-05, 0.920146, -0.391575, -7.43462e-06)
bones/20/rotation = Quaternion(0.990732, -0.0393651, -0.0118645, 0.129463)
bones/21/rotation = Quaternion(0.397777, -6.64334e-08, 2.71444e-07, 0.917482)
bones/22/rotation = Quaternion(-0.607574, 0.111894, -0.0289117, 0.78581)
bones/23/rotation = Quaternion(-1.76294e-05, 0.920151, -0.391563, 4.22936e-06)
bones/24/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/25/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/26/position = Vector3(0.0308395, 0.382458, -2.86687e-15)
bones/26/rotation = Quaternion(1.00138e-08, 1.91522e-09, 0.984639, -0.174603)
bones/27/position = Vector3(3.75295e-09, 0.213436, -1.0343e-08)
bones/27/rotation = Quaternion(-9.99889e-08, 0.391084, 0.920355, -3.39507e-08)
bones/28/position = Vector3(2.3491e-08, 0.16565, -5.09136e-09)
bones/28/rotation = Quaternion(-0.391084, -6.59362e-08, -5.87716e-08, 0.920355)
bones/29/rotation = Quaternion(1, 2.30261e-09, 1.93335e-07, -4.39844e-16)
bones/30/rotation = Quaternion(-6.93878e-18, -9.55588e-16, -1.20164e-08, 1)
bones/31/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/32/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/33/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/34/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/34/rotation = Quaternion(-1.05796e-07, 0.391084, 0.920355, -2.58643e-08)
bones/35/position = Vector3(-6.31128e-09, 0.16565, 2.70695e-09)
bones/35/rotation = Quaternion(-0.391084, -6.73931e-08, -6.22002e-08, 0.920355)
bones/36/rotation = Quaternion(1, 3.76526e-09, 1.94879e-07, 7.45058e-09)
bones/37/rotation = Quaternion(1.00614e-16, -6.74098e-17, -1.57416e-08, 1)
bones/38/position = Vector3(0.839842, 0.719866, -0.447558)
bones/38/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/39/position = Vector3(0.340039, 0.81675, 0.411348)
bones/39/rotation = Quaternion(0.613356, 0.0649558, 0.46253, 0.6369)
bones/39/scale = Vector3(1, 1, 1)
bones/40/position = Vector3(-0.87741, 1.03555, -0.447559)
bones/40/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/41/position = Vector3(-0.337171, 0.825132, 0.275915)
bones/41/rotation = Quaternion(-0.327761, 0.224667, 0.904413, -0.155356)

[node name="Skeleton_Warrior_Helmet" parent="skin/Rig/Skeleton3D" index="0"]
transform = Transform3D(0.999999, -0.00169001, 0.000177503, 0.00169693, 0.998647, -0.051963, -8.94517e-05, 0.0519632, 0.998649, 0.0287847, 1.18229, -0.075769)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="skin/Rig/Skeleton3D" index="10"]
transform = Transform3D(-0.21835, 0.766209, -0.604356, -0.616941, 0.371455, 0.693832, 0.756112, 0.524351, 0.391599, -0.280261, 0.690426, 0.349957)
bone_name = "handslot.r"
bone_idx = 13

[node name="Bone" parent="skin/Rig/Skeleton3D/BoneAttachment3D" index="0" instance=ExtResource("4_1j3fj")]
transform = Transform3D(1, 0, 2.98023e-08, 5.96046e-08, 1, 7.45058e-08, -4.47035e-07, -1.49012e-08, 1, 0.0128906, 0.170754, 0.0709279)

[node name="BoneAttachment3D2" type="BoneAttachment3D" parent="skin/Rig/Skeleton3D" index="11"]
transform = Transform3D(0.509486, 0.563695, 0.650131, 0.180276, 0.668853, -0.721204, -0.841382, 0.484647, 0.23915, 0.243132, 0.819374, 0.548323)
bone_name = "handslot.l"
bone_idx = 8

[node name="shield_gltf" parent="skin/Rig/Skeleton3D/BoneAttachment3D2" index="0" instance=ExtResource("5_1j3fj")]
transform = Transform3D(0.926516, -0.278087, 0.253451, 0.0520499, 0.761862, 0.645646, -0.37264, -0.585009, 0.720352, 0.134631, 0.0823277, 0.0935231)

[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]

[editable path="skin"]
